bindings/csharp/RevaultNative.cs

    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_change_password(IntPtr root, nuint root_len, IntPtr old_password, nuint old_len, IntPtr new_password, nuint new_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_change_default_password(IntPtr old_password, nuint old_len, IntPtr new_password, nuint new_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_replace(IntPtr root, nuint root_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_open_or_create(IntPtr root, nuint root_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_root(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern uint vault_directory_structure_version(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_private_keys(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_private_key_names(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_contact_names(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_form_aliases(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_private_key_exists(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_delete_private_key(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_store_private_key(IntPtr handle, IntPtr name, nuint name_len, IntPtr key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_private_key(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_private_key_generation(IntPtr handle, IntPtr name, nuint name_len, ushort index);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_store_contact(IntPtr handle, IntPtr name, nuint name_len, IntPtr key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_contact(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_contact_exists(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_delete_contact(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_contacts(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_store_profile_email(IntPtr handle, IntPtr name, nuint name_len, IntPtr email, nuint email_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_profile_email(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_store_backup(IntPtr handle, IntPtr id, nuint id_len, IntPtr bytes, nuint len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_load_backup(IntPtr handle, IntPtr id, nuint id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern ulong vault_directory_backup_count(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_restore_private_key(IntPtr handle, IntPtr name, nuint name_len, IntPtr key, IntPtr signing_key, [MarshalAs(UnmanagedType.I1)] bool overwrite);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_owner_signing_key(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_owner_signing_key_generation(IntPtr handle, IntPtr name, nuint name_len, ushort index);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_store_contact_signing_key(IntPtr handle, IntPtr name, nuint name_len, IntPtr key);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_directory_load_contact_signing_key(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_profile_generations(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_rotate_private_key(IntPtr handle, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_remember_lockbox(IntPtr handle, IntPtr id, nuint id_len, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_known_lockboxes(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_forget_lockbox(IntPtr handle, IntPtr path, nuint path_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_remember_access_slot_label(IntPtr handle, IntPtr id, nuint id_len, ulong slot_id, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_access_slot_labels(IntPtr handle, IntPtr id, nuint id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_find_access_slot_labels(IntPtr handle, IntPtr id, nuint id_len, IntPtr name, nuint name_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_forget_access_slot_label(IntPtr handle, IntPtr id, nuint id_len, ulong slot_id);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_define_form(IntPtr handle, IntPtr alias, nuint alias_len, IntPtr name, nuint name_len, IntPtr description, nuint description_len, IntPtr fields_proto, nuint fields_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_resolve_form(IntPtr handle, IntPtr reference, nuint reference_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_forms(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_list_form_revisions(IntPtr handle, IntPtr type_id, nuint type_id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern nuint vault_directory_seed_forms(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_directory_remember_password(IntPtr handle, IntPtr id, nuint id_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_directory_remembered_password(IntPtr handle, IntPtr id, nuint id_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_backup_default(IntPtr path, nuint path_len, [MarshalAs(UnmanagedType.I1)] bool overwrite);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_restore_default(IntPtr path, nuint path_len, [MarshalAs(UnmanagedType.I1)] bool overwrite);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void vault_directory_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_read_only_open(IntPtr root, nuint root_len, IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr vault_read_only_open_default(IntPtr password, nuint password_len);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_read_only_list_profile_names(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_read_only_list_contact_names(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_read_only_list_form_aliases(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_read_only_list_known_lockboxes(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern void vault_read_only_free(IntPtr handle);
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_serve();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool vault_agent_verify_transport();
    [DllImport("revault_api", CallingConvention = CallingConvention.Cdecl)]
    public static extern RevaultBuffer vault_agent_get(IntPtr id, nuint id_len);
